# Robot-Operations-Platform

./: .gitignore  README.md  docker-compose.yml  my-seession.json
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 05c1e7cc4286_add_task_and_last_heartbeat.py  849f5e4c2a7e_initial_migration.py  a1b2c3d4e5f6_change_xy_battery_to_float.py
backend/app/: crud.py  database.py  main.py  models.py  mqtt_worker.py  schemas.py
backend/app/simulator/: manager.py  simulator.py
backend/tests/: conftest.py  test_crud.py  test_robots.py
docs/: domain.md  scope.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
ros_bridge/: package.xml  setup.cfg  setup.py
ros_bridge/launch/: full_system.launch.py  mqtt_bridge.launch.py  robot_sim.launch.py
ros_bridge/ros_bridge/: config.py  mqtt_bridge.py  robot_node.py
ros_bridge/test/: test_nodes.py
